add a new function

--- a/vignettes/wpgsd.Rmd
+++ b/vignettes/wpgsd.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Quickstart guide"
+author: "Zifang Guo, Keaven Anderson, Jing Zhao, Linda Z. Sun"
 output:
   rmarkdown::html_document:
     toc: true
